...
        ),
        _buildChatBottomItem(
          S.of(context).g_key_squad,
          "assets/home/tabbar/chat.png",
          _tabFive,
          5,
          automationKey: const ValueKey<String>('home_tab_chat'),
          fixedIconSize: isWide ? iconSize : null,
          fixedFontSize: isWide ? fontSize : null,
        ),
      ];
    } else {
      bottomItems = [
...
